--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -62,10 +62,10 @@
 
                                             <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TotalPoints):</dt>
                                             <dd class="col-sm-8 mb-1">@Model.TotalPoints</dd>
-                                            
+
                                             <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.CountryRanking):</dt>
                                             <dd class="col-sm-8 mb-1">@Model.CountryRanking</dd>
-                                            
+
                                             <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.FavouriteTeamRanking):</dt>
                                             <dd class="col-sm-8 mb-1">@Model.FavouriteTeamRanking</dd>
 
@@ -82,11 +82,11 @@
 
                                             <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.FreeTransfer):</dt>
                                             <dd class="col-sm-8 mb-1">@Model.FreeTransfer</dd>
-                                            
+
                                             <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GlobalRanking):</dt>
                                             <dd class="col-sm-8 mb-1">@Model.GlobalRanking</dd>
-                                            
-                                            
+
+
                                         </dl>
                                     </div>
 
@@ -173,7 +173,6 @@
                                                         <td>
                                                             <a class="modalbtn" href="/AccountTeamEntity/AccountTeamPlayer/Details/@item.Id">
                                                                 @Localizer.Get("AccountTeamPlayerGameWeaks")
-                                                                <span class="text-dark">(@Localizer.Get("Click to View"))</span>
                                                             </a>
 
                                                         </td>
@@ -220,7 +219,7 @@
                                                         <td>@item.Player.Team.Name</td>
                                                         <td>@item.GameWeak.Season.Name</td>
                                                         <td>@item.GameWeak.Name</td>
-                                                        <td>@item.TransferTypeEnum.ToString()</td>
+                                                        <td>@(item.TransferTypeEnum == Entities.EnumData.LogicEnumData.TransferTypeEnum.Buying ? Localizer.Get("Buying") : Localizer.Get("Selling"))</td>
                                                         <td>@item.Cost</td>
                                                         <td>@(item.IsFree ? Localizer.Get("Yes") : Localizer.Get("No"))</td>
                                                     </tr>
