--- a/Dashboard/Areas/PlayerStateEntity/Views/PlayerGameWeakScoreState/Index.cshtml
+++ b/Dashboard/Areas/PlayerStateEntity/Views/PlayerGameWeakScoreState/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Dashboard.Areas.PlayerStateEntity.Models
+@using Microsoft.EntityFrameworkCore.Metadata.Internal
 @model Dashboard.Areas.PlayerStateEntity.Models.PlayerGameWeakScoreStateFilter
 @{
     ViewData["Title"] = Localizer.Get("PlayerGameWeakScoreStates"); 
@@ -8,12 +9,15 @@
     ViewBag.useForm = true;
 
     var accessLevel = (DashboardAccessLevelModel)ViewData[ViewDataConstants.AccessLevel];
+    ViewBag.emptyLayout = ViewData["ProfileLayOut"] != null ? (bool)ViewData["ProfileLayOut"] : false;
 
     var row = new PlayerGameWeakScoreStateDto();
 }
 
 <!-- BEGIN: Content-->
-<div class="app-content content ">
+@if (!ViewBag.emptyLayout)
+{
+    <div class="app-content content ">
     <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
     <div class="content-wrapper container-xxl p-0">
@@ -104,6 +108,72 @@
 
     </div>
 </div>
+}
+else
+{
+    <section id="ajax-datatable">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header border-bottom">
+                                <h4 class="card-title"> @ViewData["Title"]</h4>
+                            </div>
+
+                            <p class="m-2 demo-inline-spacing">
+                                <a class="btn btn-primary me-1" data-bs-toggle="collapse" href="#AdvancedFilter" role="button" aria-expanded="false" aria-controls="AdvancedFilter">
+                                    <i data-feather='filter'></i>
+                                    @Localizer.Get("Advanced Search")
+                                </a>
+                            </p>
+                            @{
+                                await Html.RenderPartialAsync("../PlayerGameWeakScoreState/Filter", Model, ViewData);
+                            }
+                            
+                            <div class="card-datatable">
+                                <table class="datatables datatables-ajax table table-responsive table">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                @Html.DisplayNameFor(model => row.Id)
+                                                <a id="details" asp-action="Details">
+                                                </a>
+
+                                                @if (accessLevel.CreateAccess)
+                                                {
+                                                    <a id="create" asp-action="CreateOrEdit">
+                                                    </a>
+                                                }
+
+                                                @if (accessLevel.EditAccess)
+                                                {
+                                                    <a id="edit" asp-action="CreateOrEdit">
+                                                    </a>
+                                                }
+                                                @if (accessLevel.DeleteAccess)
+                                                {
+                                                    <a id="delete" asp-action="Delete">
+                                                    </a>
+                                                }
+                                            </th>
+                                            <th>@Html.DisplayNameFor(model => row.Player)</th>
+                                            <th>@Html.DisplayNameFor(model => row.GameWeak)</th>
+                                            <th>@Html.DisplayNameFor(model => row.ScoreState)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Percent)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Points)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Value)</th>
+                                            <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => row.Id)
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+}
 <!-- END: Content-->
 @section scripts{
     <script>
@@ -128,6 +198,7 @@
                             data.PercentTo = $("#PercentTo").length > 0 ? $("#PercentTo").val() : null;
                             data.ValueFrom = $("#ValueFrom").length > 0 ? $("#ValueFrom").val() : null;
                             data.ValueTo = $("#ValueTo").length > 0 ? $("#ValueTo").val() : null;
+                            data.Fk_Player = @Model.Fk_Player;
                                                          
                             return JSON.stringify(data);
                         }
