--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -140,6 +140,7 @@
                                         <th>@Localizer.Get("Name")</th>
                                         <th>@Localizer.Get("Ranking")</th>
                                         <th>@Localizer.Get("TotalPoints")</th>
+                                        <th>@Localizer.Get("PlayerGameWeakScore")</th>
                                         <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
                                     </tr>
                                     </thead>
@@ -148,12 +149,15 @@
                                     {
                                         <tr>
                                             <td>
-                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
-                                                    @item.Player.Name
-                                                </a>
+                                                @item.Player.Name
                                             </td>
                                             <td>@item.Ranking</td>
                                             <td>@item.TotalPoints</td>
+                                            <td>
+                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
+                                                    @Localizer.Get("Click to View")
+                                                </a>
+                                            </td>
                                             <td>
                                                 <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreStateDetails?fk_Player=@item.Player.Id&fk_GameWeak=@Model.Fk_GameWeak">
                                                     @Localizer.Get("Click to View")
